In machine_learning_template.ipynb: Update markdown cell formatting throughout all sections

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -60,13 +60,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4138c51-6c52-44fc-887b-60b40faed00e",
+   "id": "d65a4584-3318-42b5-9f40-a9ef0ae6b595",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Project Overview</h2>\n",
-    "</div> \n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4138c51-6c52-44fc-887b-60b40faed00e",
+   "metadata": {},
+   "source": [
     "**Example: Predicting Rental Prices**  \n",
     "This is an illustrative example of a project overview designed to help you write your own. \n",
     "\n",
@@ -368,14 +374,8 @@
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Standardizing Names and Labels</h2>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a71abccc-09d1-4371-95d2-110a1d947522",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Column Names</strong> <br>\n",
     "    📌 Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors.\n",
@@ -442,14 +442,8 @@
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Handling Duplicates</h2>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee509a36-86a0-4e56-bbeb-ecb29a809288",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Identify and remove duplicates based on all columns.\n",
     "</div>"
@@ -548,14 +542,8 @@
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Handling Data Types</h2>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40cb6e08-4ce6-475c-a850-af4938b740f6",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Identify and convert incorrect storage data types.\n",
     "</div>"
@@ -701,7 +689,11 @@
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Engineering New Features</h2>\n",
-    "</div> "
+    "</div> \n",
+    "\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Derive a new feature from a raw text column or a categorical text column.\n",
+    "</div>"
    ]
   },
   {
@@ -713,7 +705,9 @@
     "    <h3 style=\"margin:0px\">From Raw Text</h3>\n",
     "</div>\n",
     "\n",
-    "Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings.\n",
+    "</div>"
    ]
   },
   {
@@ -836,7 +830,9 @@
     "    <h3 style=\"margin:0px\">From Categorical Text</h3>\n",
     "</div>\n",
     "\n",
-    "Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings.\n",
+    "</div>"
    ]
   },
   {
@@ -925,10 +921,12 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
-    "    <h2 style=\"margin:0px\">Engineering New Features</h2>\n",
+    "    <h2 style=\"margin:0px\">Defining Semantic Types</h2>\n",
     "</div> \n",
     "\n",
-    "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning.\n",
+    "</div>"
    ]
   },
   {
@@ -1001,14 +999,8 @@
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Handling Missing Values</h2>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2379de8-3825-4f42-83c7-c2365289c059",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Identification</strong> <br>\n",
     "    📌 Identify missing values.\n",
@@ -1733,7 +1725,9 @@
     "    <h2 style=\"margin:0px\">Univariate EDA</h2>\n",
     "</div>\n",
     "\n",
-    "Analyze the distribution of a single column using descriptive statistics and visualizations."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Analyze the distribution of a single column using descriptive statistics and visualizations.\n",
+    "</div>"
    ]
   },
   {
@@ -1745,7 +1739,9 @@
     "    <h3 style=\"margin:0px\">Numerical Columns</h3>\n",
     "</div> \n",
     "\n",
-    "Examine descriptive statistics (e.g., mean, median, standard deviation) and visualize the distributions (e.g., histograms) of numerical columns."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Examine descriptive statistics (e.g., mean, median, standard deviation) and visualize the distributions (e.g., histograms) of numerical columns.\n",
+    "</div>"
    ]
   },
   {
@@ -1861,7 +1857,9 @@
     "    <h3 style=\"margin:0px\">Categorical Columns</h3>\n",
     "</div> \n",
     "\n",
-    "Examine descriptive statistics (absolute and relative frequencies) and visualize the distributions (e.g., bar plots) of categorical columns."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Examine descriptive statistics (absolute and relative frequencies) and visualize the distributions (e.g., bar plots) of categorical columns.\n",
+    "</div>"
    ]
   },
   {
@@ -2065,7 +2063,9 @@
     "    <h2 style=\"margin:0px\">Bivariate EDA</h2>\n",
     "</div> \n",
     "\n",
-    "Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots.\n",
+    "</div>"
    ]
   },
   {
@@ -2077,7 +2077,9 @@
     "    <h3 style=\"margin:0px\">Numerical x Numerical</h3>\n",
     "</div> \n",
     "\n",
-    "Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots.\n",
+    "</div>"
    ]
   },
   {
@@ -2087,14 +2089,8 @@
    "source": [
     "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
     "    <h4 style=\"margin:0px\">Correlations</h4>\n",
-    "</div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74e55dda-a9f0-4d6c-a7f1-4ec6e2f5f047",
-   "metadata": {},
-   "source": [
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Correlation heatmap of all numerical and boolean columns. \n",
     "</div>"
@@ -2175,14 +2171,8 @@
    "source": [
     "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc6d20c9-164e-4136-a7b5-fec7dd9a8ade",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Scatter plot between two numerical columns.\n",
     "</div>"
@@ -2278,7 +2268,9 @@
     "    <h3 style=\"margin:0px\">Numerical x Categorical</h3>\n",
     "</div> \n",
     "\n",
-    "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots.\n",
+    "</div>"
    ]
   },
   {
@@ -2376,14 +2368,8 @@
    "source": [
     "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6acc3f3-f656-4dc9-a761-30d20d9d4425",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Bar plot of a single numerical column grouped by a single categorical column.\n",
     "</div>"
@@ -2502,7 +2488,9 @@
     "    <h3 style=\"margin:0px\">Categorical x Categorical</h3>\n",
     "</div>\n",
     "\n",
-    "Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots.\n",
+    "</div>"
    ]
   },
   {
@@ -2512,14 +2500,8 @@
    "source": [
     "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
     "    <h4 style=\"margin:0px\">Contingency Tables</h4>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f022ac7-b8bb-42e5-b872-6904e8bc0936",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Contingency table between two categorical columns. \n",
     "</div>"
@@ -2602,14 +2584,8 @@
    "source": [
     "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9bb55c9c-2812-4082-8bb0-d2d243c009b1",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Grouped bar plot between two categorical columns. \n",
     "</div>"
