In machine_learning_template.ipynb > Modeling (Regression & Classification): Add info and task boxes in Final Model section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3993,16 +3993,12 @@
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
     "    <h3 style=\"margin:0px\">Model Evaluation</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Metrics</strong> <br> \n",
+    "    📌 Evaluate model performance using metrics (RMSE, MAPE, R-squared) for training, validation, and test data.\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e13ccf3-89d6-487b-87c8-4e7f0217405a",
-   "metadata": {},
-   "source": [
-    "**Metrics**  \n",
-    "Evaluate model performance using metrics (RMSE, MAPE, R-squared) for training, validation, and test data."
    ]
   },
   {
@@ -4045,8 +4041,10 @@
    "id": "8dc71535-72da-4e7c-aef3-804f312466c9",
    "metadata": {},
    "source": [
-    "**Error Analysis: Residual Plots**  \n",
-    "Plot predicted vs. actual values and residuals vs. actual values for validation and test data."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Error Analysis: Residual Plots</strong> <br> \n",
+    "    📌 Plot predicted vs. actual values and residuals vs. actual values for validation and test data.\n",
+    "</div>"
    ]
   },
   {
@@ -4076,8 +4074,10 @@
    "id": "39d08d64-d355-40aa-9ae2-fd982b3f2b5f",
    "metadata": {},
    "source": [
-    "**Error Analysis: Descriptive Statistics and Visualizations**  \n",
-    "Analyze errors on test data with descriptive statistics (mean, median) and visualize error distributions using histograms.  "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Error Analysis: Descriptive Statistics and Visualizations</strong> <br> \n",
+    "    📌 Analyze errors on test data with descriptive statistics (mean, median) and visualize error distributions using histograms. \n",
+    "</div>"
    ]
   },
   {
@@ -4148,8 +4148,10 @@
    "id": "90eb21ce-254f-4208-82e9-0de1e2a61295",
    "metadata": {},
    "source": [
-    "**Error Analysis: Feature Relationships with Errors**  \n",
-    "Explore relationships between the features and the errors through correlations and scatterplots."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Error Analysis: Feature Relationships with Errors</strong> <br> \n",
+    "    📌 Explore relationships between the features and the errors through correlations and scatterplots. \n",
+    "</div>"
    ]
   },
   {
@@ -4213,15 +4215,11 @@
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
     "    <h3 style=\"margin:0px\">Feature Importance</h3>\n",
-    "</div>  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e213a79d-0735-4b91-a7f1-3b6275c10cd7",
-   "metadata": {},
-   "source": [
-    "Feature Importance Plot: Linear Regression or Elastic Net Regression"
+    "</div> \n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 <strong>Feature Importance Plot</strong>: Linear Regression or Elastic Net Regression.\n",
+    "</div>"
    ]
   },
   {
@@ -4262,7 +4260,9 @@
    "id": "5accb07a-2b83-4083-9f5a-09a26c776ab1",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: Decision Tree or Random Forest "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 <strong>Feature Importance Plot</strong>: Decision Tree or Random Forest. \n",
+    "</div>"
    ]
   },
   {
@@ -4303,7 +4303,9 @@
    "id": "83c656ef-62d4-4836-b919-c85e8549c92d",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: XGBoost "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 <strong>Feature Importance Plot</strong>: XGBoost.  \n",
+    "</div> "
    ]
   },
   {
@@ -4443,7 +4445,9 @@
     "    <h3 style=\"margin:0px\">Saving Model</h3>\n",
     "</div>   \n",
     "\n",
-    "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Save both the column transformer and the final model as pickle files in the <code>models</code> directory for later use.\n",
+    "</div>"
    ]
   },
   {
@@ -5312,7 +5316,10 @@
    "id": "be58eb45-fc5c-4072-a8af-e61a5dc9c140",
    "metadata": {},
    "source": [
-    "#### Model 1\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 1</h4>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: Random Forest Classifier</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -5390,7 +5397,10 @@
    "id": "d2b358e0-bfbd-4a25-87d2-2ea75536525b",
    "metadata": {},
    "source": [
-    "#### Model 2\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 2</h4>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: XGBoost Classifier</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -5521,7 +5531,10 @@
    "id": "aa2e384e-18bb-4b4f-87fc-f7517900521f",
    "metadata": {},
    "source": [
-    "#### Model 1\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 1</h4>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: Random Forest Classifier</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -5601,7 +5614,10 @@
    "id": "d1abd5ea-a197-49d2-85e4-c546ea4923e4",
    "metadata": {},
    "source": [
-    "#### Model 2\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 2</h4>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: XGBoost Classifier</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -5745,14 +5761,8 @@
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
     "    <h3 style=\"margin:0px\">Model Evaluation</h3>\n",
-    "</div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de726cf0-d814-4a59-ac1f-db2058737fe5",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Metrics: Classification Report</strong> <br> \n",
     "    📌 Evaluate model performance using metrics (accuracy, precision, recall, F1-score) with a classification report for training, validation, and test data.\n",
@@ -5901,16 +5911,10 @@
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
     "    <h3 style=\"margin:0px\">Feature Importance</h3>\n",
-    "</div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "111b5614-426b-4f8d-a57e-7a6e6a3f6e66",
-   "metadata": {},
-   "source": [
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Feature Importance Plot: Logistic Regression or Elastic Net Logistic Regression \n",
+    "    📌 <strong>Feature Importance Plot</strong>: Logistic Regression or Elastic Net Logistic Regression. \n",
     "</div>"
    ]
   },
@@ -5953,7 +5957,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Feature Importance Plot: Decision Tree or Random Forest  \n",
+    "    📌 <strong>Feature Importance Plot</strong>: Decision Tree or Random Forest.  \n",
     "</div>"
    ]
   },
@@ -5996,7 +6000,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Feature Importance Plot: XGBoost \n",
+    "    📌 <strong>Feature Importance Plot</strong>: XGBoost. \n",
     "</div>"
    ]
   },
@@ -6109,7 +6113,9 @@
     "    <h3 style=\"margin:0px\">Saving Model</h3>\n",
     "</div>\n",
     "\n",
-    "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Save both the column transformer and the final model as pickle files in the <code>models</code> directory for later use.\n",
+    "</div>"
    ]
   },
   {
