In machine_learning_template.ipynb > Introduction > Template Overview section: Add blue info box using html and css

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -32,30 +32,35 @@
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
     "    <h2 style=\"margin:0px\">Template Overview</h2>\n",
-    "</div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "45772596-a1a0-4571-9496-de435453f63d",
-   "metadata": {},
-   "source": [
-    "This Jupyter Notebook file provides a comprehensive **machine learning template** to streamline the key stages of the machine learning workflow for tabular data:\n",
+    "</div> \n",
     "\n",
-    "- **Data Preprocessing**:\n",
-    "  - Load, clean, transform, and save data using `pandas` and `sklearn`.\n",
-    "  - Handle duplicates, incorrect data types, missing values, and outliers.\n",
-    "  - Extract features, scale numerical features, and encode categorical features.\n",
-    "  - Split data into training, validation, and test sets.\n",
-    "- **Exploratory Data Analysis (EDA)**:\n",
-    "  - Analyze descriptive statistics using `pandas` and `numpy`.\n",
-    "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
-    "- **Modeling**:\n",
-    "  - Train baseline models and perform hyperparameter tuning for regression and classification tasks with `sklearn` and `xgboost`.\n",
-    "  - Evaluate regression (RMSE, MAPE, R-squared) and classification models (accuracy, precision, recall, F1-score).\n",
-    "  - Visualize feature importance, show model prediction examples, and save the final model with `pickle`.\n",
-    "\n",
-    "This template provides a flexible, customizable foundation for various datasets and use cases, making it an ideal starting point for efficient and reproducible machine learning projects. It is specifically tailored to structured tabular data (e.g., .csv, .xls, or SQL tables) using Pandas and Scikit-learn. It is not optimized for text, image, or time series data, which require  specialized preprocessing, models, and tools (e.g., TensorFlow, PyTorch)."
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ This Jupyter Notebook file provides a comprehensive <strong>machine learning template</strong> to streamline the key stages of the machine learning workflow for tabular data:\n",
+    "    <ul>\n",
+    "        <li><strong>Data Preprocessing:</strong>\n",
+    "            <ul>\n",
+    "                <li>Load, clean, transform, and save data using <code>pandas</code> and <code>sklearn</code>.</li>\n",
+    "                <li>Handle duplicates, incorrect data types, missing values, and outliers.</li>\n",
+    "                <li>Extract features, scale numerical features, and encode categorical features.</li>\n",
+    "                <li>Split data into training, validation, and test sets.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li><strong>Exploratory Data Analysis (EDA):</strong>\n",
+    "            <ul>\n",
+    "                <li>Analyze descriptive statistics using <code>pandas</code> and <code>numpy</code>.</li>\n",
+    "                <li>Visualize distributions, correlations, and relationships using <code>seaborn</code> and <code>matplotlib</code>.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li><strong>Modeling:</strong>\n",
+    "            <ul>\n",
+    "                <li>Train baseline models and perform hyperparameter tuning for regression and classification tasks with <code>sklearn</code> and <code>xgboost</code>.</li>\n",
+    "                <li>Evaluate regression (RMSE, MAPE, R-squared) and classification models (accuracy, precision, recall, F1-score).</li>\n",
+    "                <li>Visualize feature importance, show model prediction examples, and save the final model with <code>pickle</code>.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "    </ul>\n",
+    "    This template provides a flexible, customizable foundation for various datasets and use cases, making it an ideal starting point for efficient and reproducible machine learning projects. It is specifically tailored to structured tabular data (e.g., .csv, .xls, or SQL tables) using Pandas and Scikit-learn. It is not optimized for text, image, or time series data, which require specialized preprocessing, models, and tools (e.g., TensorFlow, PyTorch).\n",
+    "</div>"
    ]
   },
   {
@@ -73,7 +78,7 @@
    "id": "e4138c51-6c52-44fc-887b-60b40faed00e",
    "metadata": {},
    "source": [
-    "**Example: Predicting Rental Prices**  \n",
+    "💡 **Example: Predicting Rental Prices**  \n",
     "This is an illustrative example of a project overview designed to help you write your own. \n",
     "\n",
     "**Summary**  \n",
