In machine_learning_template.ipynb: Update project title markdown cell

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de74f1f2-9ad3-4f9f-b6c6-0adccaacc5db",
+   "id": "7a3c2b16-d37d-4a17-977d-d3a20ee8e958",
    "metadata": {},
    "source": [
-    "<div style=\"text-align:center; font-size:36px; font-weight:bold; color:#4A4A4A; background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px\">\n",
+    "<div style=\"text-align:center; font-size:36px; font-weight:bold; color:#4A4A4A; background-color:#fff6e4; padding:12px; border:3px solid #f5ecda; border-radius:6px\">\n",
     "    Machine Learning Template\n",
-    "</div>\n",
-    "\n",
-    "<p style=\"text-align:center; font-size:14px; color:#4A4A4A; margin-top:10px;\">\n",
-    "    Author: Jens Bender <br> \n",
-    "    February 2025\n",
-    "</p>"
+    "    <p style=\"text-align:center; font-size:14px; font-weight:normal; color:#4A4A4A; margin-top:15px;\">\n",
+    "        Author: Jens Bender <br> \n",
+    "        February 2025\n",
+    "    </p>\n",
+    "</div>"
    ]
   },
   {
