--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3744,7 +3744,7 @@
     "            </ul>  \n",
     "        </li>  \n",
     "    </ul>  \n",
-    "</div>  \n"
+    "</div>  "
    ]
   },
   {
@@ -4344,28 +4344,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a515b3-5e16-4026-b235-a322c152389f",
+   "id": "7c7f0226-7417-46b1-a294-b712ab15c544",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
     "    <h3 style=\"margin:0px\">Model Prediction Examples</h3>\n",
     "</div>\n",
     "\n",
-    "Show illustrative examples of model predictions from test data to demonstrate performance on unseen data.  \n",
-    "- Goal: Give stakeholders a clear picture of when the model performs well and when it struggles. \n",
-    "- Recommendations: \n",
-    "    - Show 5-10 diverse examples: Best cases, worst cases, and typical cases.\n",
-    "    - Show 2-5 most important features, actual vs. predicted values, and errors.\n",
-    "    - Add notes about any interesting patterns or edge cases observed.\n",
-    "- Example table:\n",
-    "\n",
-    "| Size (m²) | Bedrooms | Neighborhood    | Built Year | Actual Price (€) | Predicted Price (€) | Error (%) |\n",
-    "|:--------- |:-------- |:--------------- |:---------- |:---------------- |:------------------- |:--------- |\n",
-    "| 80        | 2        | Prenzlauer Berg | 1990       | 1200             | 1205                | +0.4      |\n",
-    "| 120       | 3        | Charlottenburg  | 2005       | 2500             | 2100                | -16.0     |\n",
-    "| 100       | 3        | Kreuzberg       | 2010       | 2000             | 2060                | +3.0      |\n",
-    "| 150       | 4        | Mitte           | 2018       | 3500             | 4000                | +14.3     |\n",
-    "| 75        | 1        | Neukölln        | 1995       | 1000             | 1030                | +3.0      |\n"
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Show illustrative examples of model predictions from test data to demonstrate performance on unseen data.\n",
+    "    <ul>\n",
+    "        <li>Goal: Give stakeholders a clear picture of when the model performs well and when it struggles.</li>\n",
+    "        <li>Recommendations:\n",
+    "            <ul>\n",
+    "                <li>Show 5-10 diverse examples: Best cases, worst cases, and typical cases.</li>\n",
+    "                <li>Show 2-5 most important features, actual vs. predicted values, and errors.</li>\n",
+    "                <li>Add notes about any interesting patterns or edge cases observed.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li>Example table:</li>\n",
+    "    </ul>\n",
+    "    <table style=\"border-collapse: collapse; margin-top: 10px;\">\n",
+    "        <tr style=\"background-color:#e8f4fd; border-bottom: 2px solid #a6c8e9;\">\n",
+    "            <th style=\"padding: 8px;\">Size (m²)</th>\n",
+    "            <th style=\"padding: 8px;\">Bedrooms</th>\n",
+    "            <th style=\"padding: 8px;\">Neighborhood</th>\n",
+    "            <th style=\"padding: 8px;\">Built Year</th>\n",
+    "            <th style=\"padding: 8px;\">Actual Price (€)</th>\n",
+    "            <th style=\"padding: 8px;\">Predicted Price (€)</th>\n",
+    "            <th style=\"padding: 8px;\">Error (%)</th>\n",
+    "        </tr>\n",
+    "        <tr style=\"background-color:#e8f4fd;\">\n",
+    "            <td style=\"padding: 8px;\">80</td>\n",
+    "            <td style=\"padding: 8px;\">2</td>\n",
+    "            <td style=\"padding: 8px;\">Prenzlauer Berg</td>\n",
+    "            <td style=\"padding: 8px;\">1990</td>\n",
+    "            <td style=\"padding: 8px;\">1200</td>\n",
+    "            <td style=\"padding: 8px;\">1205</td>\n",
+    "            <td style=\"padding: 8px; color:green;\">+0.4</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"background-color:#d0e7fa;\">\n",
+    "            <td style=\"padding: 8px;\">120</td>\n",
+    "            <td style=\"padding: 8px;\">3</td>\n",
+    "            <td style=\"padding: 8px;\">Charlottenburg</td>\n",
+    "            <td style=\"padding: 8px;\">2005</td>\n",
+    "            <td style=\"padding: 8px;\">2500</td>\n",
+    "            <td style=\"padding: 8px;\">2100</td>\n",
+    "            <td style=\"padding: 8px; color:red;\">-16.0</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"background-color:#e8f4fd;\">\n",
+    "            <td style=\"padding: 8px;\">100</td>\n",
+    "            <td style=\"padding: 8px;\">3</td>\n",
+    "            <td style=\"padding: 8px;\">Kreuzberg</td>\n",
+    "            <td style=\"padding: 8px;\">2010</td>\n",
+    "            <td style=\"padding: 8px;\">2000</td>\n",
+    "            <td style=\"padding: 8px;\">2060</td>\n",
+    "            <td style=\"padding: 8px; color:green;\">+3.0</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"background-color:#d0e7fa;\">\n",
+    "            <td style=\"padding: 8px;\">150</td>\n",
+    "            <td style=\"padding: 8px;\">4</td>\n",
+    "            <td style=\"padding: 8px;\">Mitte</td>\n",
+    "            <td style=\"padding: 8px;\">2018</td>\n",
+    "            <td style=\"padding: 8px;\">3500</td>\n",
+    "            <td style=\"padding: 8px;\">4000</td>\n",
+    "            <td style=\"padding: 8px; color:red;\">+14.3</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"background-color:#e8f4fd;\">\n",
+    "            <td style=\"padding: 8px;\">75</td>\n",
+    "            <td style=\"padding: 8px;\">1</td>\n",
+    "            <td style=\"padding: 8px;\">Neukölln</td>\n",
+    "            <td style=\"padding: 8px;\">1995</td>\n",
+    "            <td style=\"padding: 8px;\">1000</td>\n",
+    "            <td style=\"padding: 8px;\">1030</td>\n",
+    "            <td style=\"padding: 8px; color:green;\">+3.0</td>\n",
+    "        </tr>\n",
+    "    </table>\n",
+    "</div>"
    ]
   },
   {
@@ -4373,7 +4428,9 @@
    "id": "bfbb9e4a-e3f6-4107-ae0e-5ffe1d4fa3ac",
    "metadata": {},
    "source": [
-    "**Identify Best, Worst, and Typical Cases**"
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 <strong>Identify Best, Worst, and Typical Cases.</strong>\n",
+    "</div>"
    ]
   },
   {
@@ -4412,8 +4469,10 @@
    "id": "6a3ea3f4-6f7f-4500-b24e-9c83c2b9e572",
    "metadata": {},
    "source": [
-    "**Plot: Actual vs. Predicted Values**  \n",
-    "While identifying the best, worst, and typical cases offers insights into individual scenarios, this plot provides context for understanding overall model performance and reveals trends like consistent underprediction or overprediction."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 <strong>Plot: Actual vs. Predicted Values.</strong> <br> \n",
+    "    While identifying the best, worst, and typical cases offers insights into individual scenarios, this plot provides context for understanding overall model performance and reveals trends like consistent underprediction or overprediction.\n",
+    "</div>  "
    ]
   },
   {
